--- a/bulles.html
+++ b/bulles.html
@@ -24,7 +24,7 @@
 		animation-duration: 10s;
 		animation-iteration-count: infinite;
 		animation-direction: alternate;
-		animation-name: moving-a;
+		animation-name: moving-b;
 	}
 	@keyframes moving-a {
 		from {
