--- a/model-css/index.html
+++ b/model-css/index.html
@@ -8,35 +8,41 @@
 	<link rel='stylesheet' type='text/css' href='../../site-dp/library-css/perso.css' media='screen'/>
 	<link rel='stylesheet' type='text/css' href='../../site-dp/library-css/shapes.css'/>
 	<link rel='stylesheet' type='text/css' href='base.css'/>
-	<script type='text/javascript' src='../../site-dp/library-js-ext/angular.js'></script>
-	<script type='text/javascript' src='../../site-dp/library-js-ext/angular-ui-router.js'></script>
-</head><body ng-app='cssApp'>
+</head><body>
 	<header>
 		<h1>page de référence pour démontrer des styles css basiques</h1>
 		<p>rappel: un grand titre par page</p>
 		<p>les feuilles de style: structure.css et perso.css</p>
 		<p>structure apporte l'affichage de base, perso les couleurs de la page.</p>
 		<section id='summary' style='border:none;text-align:center;'>
-			<a ui-sref='grid()'>le framework grid</a>
-			<a ui-sref='flex()'>le framework flex</a>
-			<a ui-sref='form()'>les formulaire</a>
-			<a ui-sref='space()'>l'espace entre les boîtes</a>
-			<a ui-sref='bord()'>les bordures</a>
-			<a ui-sref='back()'>les fonds</a>
-			<a ui-sref='table()'>les tables</a>
-			<a ui-sref='list()'>les listes</a>
-			<a ui-sref='image()'>les images</a>
-			<a ui-sref='math()'>le framework mathml</a>
-			<a ui-sref='query()'>les media queries</a>
-			<a ui-sref='shape()'>les formes</a>
-			<a ui-sref='anim()'>les animations</a>
+			<button onclick="showPage ('grid')">le framework grid</button>
+			<button onclick="showPage ('flex')">le framework flex</button>
+			<button onclick="showPage ('form')">les formulaire</button>
+			<button onclick="showPage ('space')">l'espace entre les boîtes</button>
+			<button onclick="showPage ('bord')">les bordures</button>
+			<button onclick="showPage ('back')">les fonds</button>
+			<button onclick="showPage ('table')">les tables</button>
+			<button onclick="showPage ('list')">les listes</button>
+			<button onclick="showPage ('image')">les images</button>
+			<button onclick="showPage ('math')">le framework mathml</button>
+			<button onclick="showPage ('query')">les media queries</button>
+			<button onclick="showPage ('shape')">les formes</button>
+			<button onclick="showPage ('anim')">les animations</button>
 		</section>
 	</header>
-	<main><ui-view><p>allumage</p></ui-view></main>
+	<main>
+		<iframe src='coucou.html'></iframe>
+	</main>
 	<footer>
 		<p>pied de page</p>
-		<a href='#summary'>revenir au sommaire</a>
+		<a href='#summary'>revenir au sommaire</button>
 	</footer>
-</body>
-	<script type='text/javascript' src='action.js'></script>
-</html>
+</body><script type='text/javascript'>
+	var frame = document.getElementsByTagName ('iframe')[0];
+	var main = document.getElementsByTagName ('main')[0];
+	function showPage (pageName){
+		frame.src = 'page-' + pageName + '.html';
+	//	main.innerHTML = frame.innerHTML;
+		console.log (frame.body);
+	}
+</script></html>
