--- a/model-css/index.html
+++ b/model-css/index.html
@@ -30,6 +30,7 @@
 			<a ui-sref='query()'>les media queries</a>
 			<a ui-sref='shape()'>les formes</a>
 			<a ui-sref='anim()'>les animations</a>
+			<a ui-sref='gnrl()'>généralités</a>
 		</section>
 	</header>
 	<main><ui-view><p>allumage</p></ui-view></main>
