--- a/pwa-test/index.html
+++ b/pwa-test/index.html
@@ -14,13 +14,11 @@
 	<meta name='apple-mobile-web-app-title' content='test pwa'>
 	<link rel='stylesheet' type='text/css' href='static/structure.css'/>
 	<link rel='stylesheet' type='text/css' href='static/perso.css'/>
-	<script type='text/javascript' src='static/indexed-db.js'></script>
+	<script type='text/javascript' src='database.js'></script>
 </head><body>
 	<h1>ma liste de courses</h1>
 	<p id='etat-connection-internet'>la connection internet</p>
-	<p>je veux entrer en base ce message: coucou je suis deborah</p>
-	<p id='message-idb'>le message: $message</p>
-	<p id='message-idb-bis'>le message: $message</p>
+	<h2>liste des messages</h2>
 	<button id='install-pwa'>installer l'application</button>
 	<script type='text/javascript' src='service-launcher.js'></script>
 	<script type='text/javascript'>
@@ -31,21 +29,23 @@ else pConnection.innerHTML = 'la connection internet est fermée';
 window.addEventListener ('online', function(){ pConnection.innerHTML = "la connection internet vient de s'ouvrir"; });
 window.addEventListener ('offline', function(){ pConnection.innerHTML = 'la connection internet vient de se fermer'; });
 // échanger avec indexed-db
-var messageOrigine ={ message: 'coucou je suis deborah' };
-var messageIdb ={ id: 0, message: "le message n'a pas été récupéré" };
-var containerIdb = document.getElementById ('message-idb');
-var containerIdbBis = document.getElementById ('message-idb-bis');
+databaseName = 'test';
+var messageList =[
+	{ id: 2, etat: 'new', message: 'message b' },
+	{ id: 3, etat: 'new', message: 'message c' },
+	{ id: 1, etat: 'new', message: 'message a' },
+	{ id: 4, etat: 'new', message: 'message d' }
+]
+var msgTitre = document.getElementsByTagName ('button')[0];
 
-function addCallback (res){ console.log ('res add', res); }
-function getCallback (res){
-	console.log ('res get', res);
-	res.message = 'je suis le message modifié';
-	console.log ('res get bis', res);
-	put (res, addCallback);
-}
-add (messageOrigine, addCallback);
-get (5, getCallback);
-del (8)
-getAll (addCallback);
+function printMessages (messageList){
+	var msgTag = null;
+	for (var m=0; m< messageList.length; m++){
+		msgTag = document.createElement ('p');
+		msgTag.innerHTML = messageList[m].message;
+		document.body.insertBefore (msgTag, msgTitre);
+}}
+sendToIdb (databaseName, function(){ getFromIdb (databaseName, printMessages); }, messageList);
+
 	</script>
 </body></html>
