--- a/dp3.html
+++ b/dp3.html
@@ -7,7 +7,7 @@
 	<link rel='stylesheet' type='text/css' href='library-css/structure.css'/>
 	<link rel='stylesheet' type='text/css' href='library-css/perso.css' media='screen'/>
 	<script type='text/javascript' src='library-js/text.js'></script>
-	<script type='text/javascript' src='file:///home/ent6904919/Bureau/dp3.js'></script>
+	<script type='text/javascript' src='/home/ent6904919/Bureau/html/dp3.js'></script>
 <style type='text/css'>
 	form {
 		display: grid;
@@ -21,11 +21,11 @@
 	<p>un nombre: (( age ))</p>
 	<p>une liste simple:<span> bonjour (( enfants )),</span></p>
 	<p>un dictionnaire - objet:<span> le (( sacAmain )),</span></p>
+	<p>une liste de dictionnaires:<span list='vaisselle'> (( nom )): (( nombre )),</span></p>
 	<h3>une liste imbriquée</h3>
 	<p>à faire:<span> - (( taches )),</span></p>
 	<h2>l'interractivité</h2>
-	<input type='text' name='prenom'/><button>entrez votre nom</button>
-	<h3>plusieurs champs</h3>
+	<input type='text' name='prenom'/>
 	<input type='text' name='enfants'/>
 </body>
 <script type='text/javascript'>
@@ -38,6 +38,7 @@
 		[ 'pendre le linge', 'nettoyer la salle de bain' ],
 		[ 'récurer le four', 'descendre la poubelle' ]
 	];
+	var vaisselle =[ { nom: 'couteaux pointus', nombre: 6 }, { nom: 'fourchettes', nombre: 2 }, { nom: 'couteaux', nombre: 1 }, { nom: 'petites cuillères', nombre: 4 } ];
 	dpInit();
 </script>
 </html>
