--- a/model-css/page-anim.html
+++ b/model-css/page-anim.html
@@ -1,24 +1,16 @@
-<style type='text/css'>
-	#moving-heart {
-		animation-name: moving-heart;
-		animation-duration: 10s;
-		animation-iteration-count: 2;
-	}
-	@keyframes moving-heart {
-		from {
-			margin-left: 50%;
-			margin-top: 20%;
-		}
-		to {}
-		0% { background-color: red; }
-		50% { background-color: pink; }
-	}
-	.boule {
-		background-color: var(--button-bg);
-		width: 6em;
-		height: 6em;
-	}
-</style><section>
+<!DOCTYPE html><html><head>
+	<title>animation - notes de css</title>
+	<meta name='viewport' content='width=device-width,initial-scale=1'/>
+	<meta charset='utf-8'/>
+	<link rel='import' type='text/css' href='page-back.html'/>
+	<link rel='icon' type='image/x-icon' href='../../site-dp/data/nounours-perso.svg'/>
+	<link rel='stylesheet' type='text/css' href='../../site-dp/library-css/structure.css'/>
+	<link rel='stylesheet' type='text/css' href='../../site-dp/library-css/perso.css' media='screen'/>
+	<link rel='stylesheet' type='text/css' href='../../site-dp/library-css/shapes.css'/>
+	<link rel='stylesheet' type='text/css' href='base.css'/>
+	<script type='text/javascript' src='../../site-dp/library-js-ext/angular.js'></script>
+	<script type='text/javascript' src='../../site-dp/library-js-ext/angular-ui-router.js'></script>
+</head><body>
 	<h2>les animations</h2>
 	<p class='shape heart' id='moving-heart'></p>
 	<h3>id= animated</h3>
@@ -34,4 +26,4 @@
 	<p>animated:hover { animation-play-state: paused; } running</p>
 	<h3>la boule</h3>
 	<p class='boule tourne'></p>
-</section>
+</body></html>
